devops/k8s/ingress/ingress.yaml
# Prérequis : minikube addons enable ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnify-ingress
  namespace: learnify
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: learnify.local
      http:
        paths:
          # Frontend (SPA)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # API Gateway → tous les microservices
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

          # OAuth2 callbacks
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
